--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,14 @@
 version=2.0.0
 
-quarkusVersion=2.9.2.Final
+quarkusVersion=2.11.1.Final
 lombokVersion=1.18.24
 swaggerAnnotationsVersion=1.6.6
-liquibaseVersion=4.10.0
-jooqVersion=3.16.6
-postgresqlVersion=42.3.5
+liquibaseVersion=4.14.0
+jooqVersion=3.17.2
+postgresqlVersion=42.4.0
 jaxbVersion=3.0.2
 picocliVersion=4.6.3
+
+amazonawsVersion=1.12.274
 
 generatedCodeBasePackage=ru.craftysoft.schemaregistry
